# desarrolloDeProyectos-especializacionIA-moduloUno-neumonia

./: .gitignore  Dockerfile  Makefile  README.md  config.json  detector_neumonia.py  generator_pdf.py  historial.csv  main.py  pyproject.toml  pytest.ini  requirements.txt
models/: download_model.txt
src/neumonia/: csv_handler.py  detector_neumonia.py  dicom_reader.py  grad_cam.py  integrator.py  load_model.py  pdf_generator.py  pre_processor.py
tests/: test_csv_handler.py  test_dicom_reader.py  test_generator_pdf.py  test_grad_cam.py  test_integrator.py  test_load_model.py  test_pdf_generator.py  test_pre_processor.py  test_preprocessor.py
